# src/types/user.ts
@@ -5,6 +5,7 @@ export interface User {
   name: string;
   date_of_birth: string | null;
   google_id: string | null;
+  role: 'user' | 'backlog';
   created_at: string;
   updated_at: string;
 }
@@ -15,6 +16,7 @@ export interface PublicUser {
   name: string;
   dateOfBirth: string | null;
   googleId: string | null;
+  role: 'user' | 'backlog';
   createdAt: string;
   updatedAt: string;
 }
@@ -26,6 +28,7 @@ export function mapToPublicUser(user: User): PublicUser {
     name: user.name,
     dateOfBirth: user.date_of_birth,
     googleId: user.google_id,
+    role: user.role,
     createdAt: user.created_at,
     updatedAt: user.updated_at,
   };
